MainPage overflow fix

--- a/application/Client/src/Pages/MainPage/MainPage.css
+++ b/application/Client/src/Pages/MainPage/MainPage.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  height: 100vh;
+  height: 800px; 
 }
 
 .main {
